--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ pbr!=2.1.0,>=2.0.0 # Apache-2.0
 eventlet!=0.18.3,!=0.20.1,>=0.18.2 # MIT
 requests>=2.14.2 # Apache-2.0
 netaddr>=0.7.18 # BSD
-neutron-lib>=1.25.0 # Apache-2.0
-neutron>=13.0.0 # Apache-2.0
+neutron-lib==1.25.0 # Apache-2.0
+neutron>=14.0.0,<15.0.0 # Apache-2.0
 SQLAlchemy>=1.2.0 # MIT
 alembic>=0.8.10 # MIT
 six>=1.10.0 # MIT
